--- a/main.html
+++ b/main.html
@@ -7,6 +7,16 @@
 
   <body>
     <!-- write the body here -->
+	  <h2>Check voting Eligibility</h2>
+	  <Form id="voteForm">
+		  <label for="name">Name:</label>
+		  <input type="text" id="name" placeholder="Enter your Name">
+		  <br><br>
+		  <label for="age">Age:</label>
+		  <input type="number" id="age" placeholder="Enter your Age">
+		  <br><br>
+		  <button type="submit" id="btn">Submit</button>
+	  </Form>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
